{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 12,
  "lineage": "1a371433-c03d-3251-1a1b-5d186632b62d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09558250a3419e7d0",
            "arn": "arn:aws:ec2:us-east-2:256642093393:instance/i-053ed5041e5fa8764",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-053ed5041e5fa8764",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "keyohie",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-08b578bd72f604dd5",
            "private_dns": "ip-10-0-1-179.us-east-2.compute.internal",
            "private_ip": "10.0.1.179",
            "public_ip": "3.17.184.113",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-012066f6639893e27",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0503b16670c18e165"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02a74a29b3bd5e813",
            "tags": {
              "Name": "HelloWorld"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0503b16670c18e165"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_ssh",
            "aws_subnet.MyVPC-PubSN",
            "aws_vpc.MyVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "MyIGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:256642093393:internet-gateway/igw-0e3455cf2aa2d42dc",
            "id": "igw-0e3455cf2aa2d42dc",
            "owner_id": "256642093393",
            "tags": {
              "Name": "MyIGW"
            },
            "vpc_id": "vpc-05d08a8ea26c34a69"
          },
          "dependencies": [
            "aws_vpc.MyVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "MyPriRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-09db9b2fc8a5592c5",
            "owner_id": "256642093393",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "MyPriRT"
            },
            "vpc_id": "vpc-05d08a8ea26c34a69"
          },
          "dependencies": [
            "aws_vpc.MyVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "MyPubRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0c3a197a75c28657c",
            "owner_id": "256642093393",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e3455cf2aa2d42dc",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "MyPubRT"
            },
            "vpc_id": "vpc-05d08a8ea26c34a69"
          },
          "dependencies": [
            "aws_internet_gateway.MyIGW",
            "aws_vpc.MyVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "MyRTPriAsso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02e6253733ea022ef",
            "route_table_id": "rtb-09db9b2fc8a5592c5",
            "subnet_id": "subnet-0463f1e88134c481c"
          },
          "dependencies": [
            "aws_route_table.MyPriRT",
            "aws_subnet.MyVPC-PriSN",
            "aws_vpc.MyVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "MyRTPubAsso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d8fd05ca42d28477",
            "route_table_id": "rtb-0c3a197a75c28657c",
            "subnet_id": "subnet-02a74a29b3bd5e813"
          },
          "dependencies": [
            "aws_internet_gateway.MyIGW",
            "aws_route_table.MyPubRT",
            "aws_subnet.MyVPC-PubSN",
            "aws_vpc.MyVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:256642093393:security-group/sg-0503b16670c18e165",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0503b16670c18e165",
            "ingress": [
              {
                "cidr_blocks": [
                  "73.133.31.198/32"
                ],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh",
            "name_prefix": "",
            "owner_id": "256642093393",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-05d08a8ea26c34a69"
          },
          "dependencies": [
            "aws_vpc.MyVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "MyVPC-PriSN",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:256642093393:subnet/subnet-0463f1e88134c481c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0463f1e88134c481c",
            "map_public_ip_on_launch": false,
            "owner_id": "256642093393",
            "tags": {
              "Name": "MyVPC-PriSN"
            },
            "vpc_id": "vpc-05d08a8ea26c34a69"
          },
          "dependencies": [
            "aws_vpc.MyVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "MyVPC-PubSN",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:256642093393:subnet/subnet-02a74a29b3bd5e813",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-02a74a29b3bd5e813",
            "map_public_ip_on_launch": false,
            "owner_id": "256642093393",
            "tags": {
              "Name": "MyVPC-PubSN"
            },
            "vpc_id": "vpc-05d08a8ea26c34a69"
          },
          "dependencies": [
            "aws_vpc.MyVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "MyVPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:256642093393:vpc/vpc-05d08a8ea26c34a69",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0fb32df8c9472e285",
            "default_route_table_id": "rtb-04b67ea73c6750acb",
            "default_security_group_id": "sg-06fef63f22293c092",
            "dhcp_options_id": "dopt-6be96800",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-05d08a8ea26c34a69",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-04b67ea73c6750acb",
            "owner_id": "256642093393",
            "tags": {
              "Name": "MyVPC"
            }
          }
        }
      ]
    }
  ]
}